// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`t-props > a key renamed while its value stays undefined updates the child 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1({...ctx['this'].p()}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`t-props > a key renamed while its value stays undefined updates the child 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(Object.keys(ctx['this'].props).join(','), node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-props > basic use 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({...ctx['this'].some.obj}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props > basic use 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.a+ctx['this'].props.b, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-props > child receives a copy of the t-props object, not the original 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, []);
  
  return function template(ctx, node, key = "") {
    return comp1({...ctx['this'].childProps}, key + \`\\u00021\`, node, this, null);
  }
}"
`;

exports[`t-props > child receives a copy of the t-props object, not the original 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;

exports[`t-props > t-props and other props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Comp\`, true, false, true, ["a"]);
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({...ctx['this'].state1,a: ctx['this'].a}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props > t-props and other props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.a, node, key, "\\u00021");
    const b3 = safeOutput(ctx['this'].props.b, node, key, "\\u00022");
    return block1([], [b2, b3]);
  }
}"
`;

exports[`t-props > t-props only 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Comp\`, true, false, true, []);
  
  let block1 = createBlock(\`<div><div><block-child-0/></div></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({...ctx['this'].state}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props > t-props only 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.a, node, key, "\\u00021");
    return block1([], [b2]);
  }
}"
`;

exports[`t-props > t-props with props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, true, ["a","b"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({...ctx['this'].childProps,a: 1,b: 2}, key + \`\\u00021\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`t-props > t-props with props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  let block1 = createBlock(\`<div/>\`);
  
  return function template(ctx, node, key = "") {
    return block1();
  }
}"
`;
